@@ -1,0 +1,80 @@
+/********************************************************************************
+ * CruiseControl, a Continuous Integration Toolkit
+ * Copyright (c) 2006, ThoughtWorks, Inc.
+ * 651 W Washington Ave. Suite 600
+ * Chicago, IL 60661 USA
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *     + Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *
+ *     + Redistributions in binary form must reproduce the above
+ *       copyright notice, this list of conditions and the following
+ *       disclaimer in the documentation and/or other materials provided
+ *       with the distribution.
+ *
+ *     + Neither the name of ThoughtWorks, Inc., CruiseControl, nor the
+ *       names of its contributors may be used to endorse or promote
+ *       products derived from this software without specific prior
+ *       written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
+ * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
+ * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR
+ * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+ * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+ * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+ * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+ * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+ * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ ********************************************************************************/
+package net.sourceforge.cruisecontrol.config;
+
+import junit.framework.TestCase;
+import net.sourceforge.cruisecontrol.ConfigManager;
+
+import java.io.BufferedWriter;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+
+public class XMLConfigManagerTest extends TestCase {
+    private File configurationFile;
+
+    protected void setUp() throws Exception {
+        super.setUp();
+
+        configurationFile = File.createTempFile("config", "xml");
+        configurationFile.deleteOnExit();
+        writeConfigurationFile(
+                "<cruisecontrol><project name=\"DOESNTMATTER\"><schedule>"
+                        + "<ant/></schedule></project></cruisecontrol>\n");
+    }
+
+    public void testShouldStoreUpdatedMD5HashWhenItChanges() throws Exception {
+        ConfigManager configManager = new XMLConfigManager(configurationFile);
+
+        assertFalse(configManager.reloadIfNecessary());
+
+        writeConfigurationFile(
+                "<cruisecontrol><project name=\"DOESNTMATTER\"><schedule interval=\"30\">"
+                        + "<ant/></schedule></project></cruisecontrol>");
+        assertTrue(configManager.reloadIfNecessary());
+
+        assertFalse(configManager.reloadIfNecessary());
+    }
+
+    private void writeConfigurationFile(String contents) throws IOException {
+        StringBuffer configuration = new StringBuffer();
+        configuration.append(contents);
+        BufferedWriter writer = new BufferedWriter(new FileWriter(configurationFile));
+        writer.write(configuration.toString());
+        writer.close();
+    }
+}
